[metadata]
name = viaduc
version = 1.0.3
description = probably the simplest way to create a nice-looking gui using python
long_description = viaduc uses pywebview and a bit of html/css/js to provide a gui for other tools and scripts.
keywords = gui, ui, webview, pywebview, tkinter
author = Diego Torres Milano
author_email = dtmilano@gmail.com
url = https://github.com/dtmilano/viaduc
license = Apache

[options]
packages = viaduc
install_requires =
  argparse
  pywebview
  forbiddenfruit
