[metadata]
name = viaduc
version = 1.0.7
description = probably the simplest way to create a nice-looking gui using python
long_description_content_type = text/markdown
long_description =
  Viaduc is probably the simplest way to create a nice-looking gui using python and tiny bit of html/css/js.

  ![form example](https://raw.githubusercontent.com/dtmilano/viaduc/main/screenshots/form.png)

  viaduc uses pywebview and [Bootstrap](https://getbootstrap.com/) to provide a gui for other tools and scripts.
keywords = gui, ui, webview, pywebview, tkinter
author = Diego Torres Milano
author_email = dtmilano@gmail.com
url = https://github.com/dtmilano/viaduc
license = Apache

[options]
packages = viaduc
install_requires =
  argparse
  pywebview
  forbiddenfruit
